--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,39 +5,40 @@
 .banner-img {
     width: 100%;
     mask-image: linear-gradient(to right, transparent, black 75%);
-    -webkit-mask-image: linear-gradient(to right, transparent, black 75%);;
+    -webkit-mask-image: linear-gradient(to right, transparent, black 75%);
+    ;
 }
 
-.hero-caption{
+.hero-caption {
     position: absolute;
     width: 100%;
     padding-left: 6%;
     bottom: 0;
 }
 
-.caption-img{
+.caption-img {
     width: 90%;
     max-width: 420px;
     margin-bottom: 30px;
 }
 
-.hero-caption p{
+.hero-caption p {
     max-width: 700px;
     font-size: 17px;
     margin-bottom: 20px;
 }
 
-.hero-btns{
-    display:flex;
+.hero-btns {
+    display: flex;
     gap: 10px;
     margin-bottom: 50px;
 }
 
-.hero-btns .btn img{
+.hero-btns .btn img {
     width: 25px;
 }
 
-.hero-btns .btn{
+.hero-btns .btn {
     border: 0;
     outline: 0;
     padding: 8px 20px;
@@ -51,21 +52,69 @@
     cursor: pointer;
 }
 
-.hero-btns .btn.dark-btn{
+.hero-btns .btn.dark-btn {
     background: #6d6d6eb3;
     color: #fff;
 }
 
-.hero-btns .btn:hover{
+.hero-btns .btn:hover {
     background: #ffffffbf;
 }
 
-.hero-btns .btn.dark-btn:hover{
-background: #6d6d6e66;
+.hero-btns .btn.dark-btn:hover {
+    background: #6d6d6e66;
 }
 
-.more-cards{
+.more-cards {
     padding-left: 6%;
 }
 
+@media (max-width: 1024px) {
+    .hero-caption .title-cards {
+        display: none;
+    }
 
+    .hero-btns {
+        margin-bottom: 30px;
+    }
+}
+
+@media (max-width: 800px) {
+    .hero-caption {
+        padding-left: 4%;
+    }
+
+    .caption-img {
+        margin-bottom: 10px;
+        width: 40%;
+    }
+
+    .hero-caption p {
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+
+    .hero-btns .btn img {
+        width: 20px;
+    }
+
+    .more-cards {
+        padding-left: 4%;
+    }
+}
+
+@media (max-width: 500px) {
+    .caption-img {
+        display: none;
+    }
+
+    .hero-btn .btn img {
+        width: 15px;
+    }
+
+    .btn {
+        padding: 4px 10px;
+        gap: 5px;
+        font-size: 10px;
+    }
+}
