--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -42,7 +42,7 @@
     font-weight: 500;
 }
 
-.login-form button {
+.login-form .buttonDiv {
     width: 100%;
     border: 0;
     outline: 0;
@@ -54,6 +54,7 @@
     font-weight: 500;
     margin-top: 20px;
     cursor: pointer;
+    text-align: center;
 }
 
 .form-help {
@@ -74,13 +75,37 @@
     width: 18px;
     height: 18px;
 }
-.form-switch{
+
+.form-switch {
     margin-top: 40px;
     color: #737373;
 }
-.form-switch span{
+
+.form-switch span {
     margin-left: 6px;
     color: #fff;
     font-weight: 500;
     cursor: pointer;
+}
+
+.login-spinner{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-spinner img{
+    width: 60px;
+}
+
+@media (max-width: 500px){
+    .login{
+        padding: 15px 5%;
+    }
+    .login-form{
+        padding: 20px;
+        margin-top: 30px;
+    }
 }
